--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,7 +3,9 @@
   <%= f.text_field :title %>
   <%= f.label :details %>
   <%= f.text_field :details %>
-  <%= f.label :completed %>
-  <%= f.text_field :completed %>
+  <% unless @task.new_record? %>
+    <%= f.label :completed %>
+    <%= f.text_field :completed %>
+  <% end %>
   <%= f.submit%>
 <% end %>
